[package]
name = "proto-query-engine"
version = "0.1.0"
authors = ["phas02 <suter.philipp@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies.uuid]
version = "1.16"
features = ["v4", "v7", "js"]

[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]

[dependencies]
bytes = "^1.10.1"
js-sys = "^0.3.77"
web-sys = { version = "^0.3.77", features = [
    "console",
    "Blob",
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "Navigator",
    "ReadableStream",
    "StorageManager",
    "Window",
] }
async-trait = "^0.1.88"
snafu = { version = "^0.8.5", default-features = false, features = ["std"] }
futures = "^0.3.31"
wasm-bindgen = "^0.2.100"
wasm-bindgen-futures = "^0.4.50"
serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = "^0.6.5"
url = "^2.5"
once_cell = "^1.21"
object_store = "^0.12"
datafusion = { version = "47.0.0", default-features = false }
tokio = { version = "^1.0" }
chrono = { version = "^0.4", features = ["wasmbind", "js-sys"] }
regex = "^1.11"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "^0.3.50"

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
